--- a/index.html
+++ b/index.html
@@ -65,36 +65,36 @@
     <ol>
       <li>
         <p>Localización del servidor.</p>
-        <img src="punto1.png" alt="Localización del servidor" width="50%" height="50%">
+        <img src="punto1.png" width="50%" height="50%">
       </li>
       <li>
         <p>Ayuda del servidor.</p>
-        <img src="punto2.png" alt="Ayuda del servidor" width="50%" height="50%">
+        <img src="punto2.png" width="50%" height="50%">
       </li>
       <li>
         <p>Muestre el archivo de configuración de forma gráfica.</p>
-        <img src="punto3.png" alt="Archivo de configuración gráfico" width="50%" height="50%">
+        <img src="punto3.png" width="50%" height="50%">
       </li>
       <li>
         <p>Muestre el archivo de configuración en PowerShell usando el comando: <code>more mercury.ini</code></p>
-        <img src="punto4.png" alt="Archivo mercury.ini en PowerShell" width="50%" height="50%">
+        <img src="punto4.png" width="50%" height="50%">
       </li>
       <li>
         <p>Inicie el servidor mediante XAMPP.</p>
-        <img src="punto5.png" alt="Inicio del servidor con XAMPP" width="50%" height="50%">
+        <img src="punto5.png"  width="50%" height="50%">
       </li>
       <li>
         <p>Detenga el servidor mediante XAMPP.</p>
-        <img src="punto6.png" alt="Detener servidor con XAMPP" width="50%" height="50%">
+        <img src="punto6.png"  width="50%" height="50%">
       </li>
       <li>
         <p>Inicie el servidor mediante CMD y compruebe en la interfaz de XAMPP.</p>
-        <img src="punto7.png" alt="Inicio desde CMD" width="50%" height="50%">
+        <img src="punto7.png"  width="50%" height="50%">
       </li>
       <li>
         <p>Detenga el servidor mediante comando CMD y compruebe en la interfaz de XAMPP.</p>
         <p><strong>Nota:</strong> Es importante cerrar el servidor en otra terminal para que no cierre en rojo y evitar que falle XAMPP.</p>
-        <img src="punto8.png" alt="Detener desde CMD" width="50%" height="50%">
+        <img src="punto8.png"  width="50%" height="50%">
       </li>
     </ol>
   </main>
